
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-18] Allow editing of MODX_CONFIG_KEY in setup welcome view
- [#MODX-18] Prompt user for MODX_CORE_PATH if not found at beginning of setup
- [#MODX-760], [#MODX-1080], [#MODX-1528] Added setup option to set new_file_permissions and new_folder_permissions in welcome view
- [#MODX-760], [#MODX-1528] Removed new_file_permissions and new_folder_permissions system settings from setup
- [#MODX-760], [#MODX-1528] Updated xPDO 2.0 to revision 407: new file and folder permissions determined from umask()
- [#MODX-878] Stay buttons now action-specific, done through Ext state rather than PHP
- Redo logic order of modPackageBuilder::buildLexicon to ensure languages are packaged in before topics
- [#MODX-1647] Added width specification to force width of screen to prevent scrolling off of RTE TVs
- Cleaned up tvTitle Form Customization rule by moving code from JS to PHP
- Fixed z-index issue for windows due to IE fix
- [#MODX-732] Added z-index force to topmenu for IE, fixed rightlogin div on topbar for IE
- [#MODX-1641] Optimized and cleaned code dealing with Form Customization TV visibility and default values
- [#MODX-1658] Fixed bug where placing a menu item in a submenu would place it in top level
- [#MODX-1624] Enabled changing of text field in menu items
- [#MODX-1656], [#MODX-1654] Fixed CSS gap in install summary in setup
- [#MODX-1655] Fixed hardcoded lexicon strings in setup
- [#MODX-1621] Remove unnecessary context menu items from items in Resource Group Resources tree
- [#MODX-1627] Fixed incorrect menu in resource group tree resources when newly dragged
- [#MODX-1599] Added manager_date_format system setting for customizing date formats for the manager